--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,14 +109,146 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "40359eee-9cd7-4884-bfa4-83344c222305",
       "metadata": {
         "id": "40359eee-9cd7-4884-bfa4-83344c222305"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Scraping URL: https://www.imdb.com/search/title/?title_type=feature&user_rating=7.5,,&release_date=1990-01-01,1992-12-31&sort=user_rating,desc&start=1\n",
+            "Found 0 movies on page starting at 1\n",
+            "Empty DataFrame\n",
+            "Columns: []\n",
+            "Index: []\n"
+          ]
+        }
+      ],
       "source": [
-        "# Your solution goes here"
+        "# my solution goes here\n",
+        "\n",
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "import time\n",
+        "import random\n",
+        "\n",
+        "def get_soup(url, headers):\n",
+        "    try:\n",
+        "        response = requests.get(url, headers=headers)\n",
+        "        response.raise_for_status()\n",
+        "        return BeautifulSoup(response.content, 'html.parser')\n",
+        "    except requests.exceptions.RequestException as e:\n",
+        "        print(f\"Request failed: {e}\")\n",
+        "        return None\n",
+        "\n",
+        "def parse_movie_data(movie, movie_nr):\n",
+        "    # Title\n",
+        "    title = movie.h3.a.text\n",
+        "    \n",
+        "    # Year\n",
+        "    year = movie.h3.find('span', class_='lister-item-year').text.strip('()')\n",
+        "    \n",
+        "    # Rating\n",
+        "    rating = movie.find('div', class_='inline-block ratings-imdb-rating').strong.text\n",
+        "    \n",
+        "    # Runtime\n",
+        "    runtime = movie.find('span', class_='runtime').text.split()[0] if movie.find('span', class_='runtime') else 'N/A'\n",
+        "    \n",
+        "    # Genre\n",
+        "    genre = movie.find('span', class_='genre').text.strip() if movie.find('span', class_='genre') else 'N/A'\n",
+        "    \n",
+        "    # Description\n",
+        "    description = movie.find_all('p', class_='text-muted')[1].text.strip() if len(movie.find_all('p', class_='text-muted')) > 1 else 'N/A'\n",
+        "    \n",
+        "    # Director and Stars\n",
+        "    credit = movie.find('p', class_='').text.strip().split('|')\n",
+        "    director = credit[0].replace('Director:', '').replace('Directors:', '').strip()\n",
+        "    star = credit[1].replace('Stars:', '').strip() if len(credit) > 1 else 'N/A'\n",
+        "    \n",
+        "    # Votes\n",
+        "    vote = movie.find_all('span', attrs={'name': 'nv'})[0].text.replace(',', '') if movie.find_all('span', attrs={'name': 'nv'}) else 'N/A'\n",
+        "    \n",
+        "    # Gross Earnings\n",
+        "    gross = movie.find_all('span', attrs={'name': 'nv'})[1].text.replace('$', '').replace('M', '') if len(movie.find_all('span', attrs={'name': 'nv'})) > 1 else 'N/A'\n",
+        "    \n",
+        "    return {\n",
+        "        'Movie Nr': movie_nr,\n",
+        "        'Title': title,\n",
+        "        'Year': year,\n",
+        "        'Rating': float(rating),\n",
+        "        'Runtime (min)': runtime,\n",
+        "        'Genre': genre,\n",
+        "        'Description': description,\n",
+        "        'Director': director,\n",
+        "        'Stars': star,\n",
+        "        'Votes': vote,\n",
+        "        'Gross ($M)': gross\n",
+        "    }\n",
+        "\n",
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    # Base URL with placeholders for pagination\n",
+        "    base_url = f\"https://www.imdb.com/search/title/?title_type={title_type}&user_rating={user_rating},&release_date={start_date},{end_date}&sort=user_rating,desc&start={{}}\"\n",
+        "    \n",
+        "    all_movies = []\n",
+        "    start = 1\n",
+        "    user_agents = [\n",
+        "        \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36\",\n",
+        "        \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.212 Safari/537.36\",\n",
+        "        \"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.1.1 Safari/605.1.15\"\n",
+        "    ]\n",
+        "    \n",
+        "    while True:\n",
+        "        headers = {\n",
+        "            \"User-Agent\": random.choice(user_agents)\n",
+        "        }\n",
+        "        \n",
+        "        url = base_url.format(start)\n",
+        "        print(f\"Scraping URL: {url}\")  # Debugging print\n",
+        "        \n",
+        "        soup = get_soup(url, headers)\n",
+        "        \n",
+        "        if soup is None:\n",
+        "            break\n",
+        "        \n",
+        "        # Extract movie data\n",
+        "        movies = soup.find_all('div', class_='lister-item mode-advanced')\n",
+        "        print(f\"Found {len(movies)} movies on page starting at {start}\")  # Debugging print\n",
+        "        \n",
+        "        if not movies:\n",
+        "            break\n",
+        "        \n",
+        "        for idx, movie in enumerate(movies):\n",
+        "            movie_data = parse_movie_data(movie, start + idx)\n",
+        "            all_movies.append(movie_data)\n",
+        "        \n",
+        "        # Increment the start parameter by 50 to move to the next page\n",
+        "        start += 50\n",
+        "\n",
+        "        # To avoid being blocked, let's wait for a while before the next request\n",
+        "        time.sleep(random.uniform(1, 3))\n",
+        "    \n",
+        "    # Create a DataFrame\n",
+        "    df = pd.DataFrame(all_movies)\n",
+        "    \n",
+        "    return df\n",
+        "\n",
+        "# Define parameters\n",
+        "title_type = 'feature'\n",
+        "user_rating = '7.5,'\n",
+        "start_date = '1990-01-01'\n",
+        "end_date = '1992-12-31'\n",
+        "\n",
+        "# Scrape IMDb data\n",
+        "movies_df = scrape_imdb(title_type, user_rating, start_date, end_date)\n",
+        "\n",
+        "# Display the DataFrame\n",
+        "print(movies_df)\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -151,18 +283,152 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea",
       "metadata": {
         "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Scraping URL: https://www.imdb.com/search/title/?title_type=feature&user_rating=7.5,,&release_date=1990-01-01,1992-12-31&sort=user_rating,desc&start=1\n",
+            "Found 0 movies on page starting at 1\n",
+            "Empty DataFrame\n",
+            "Columns: []\n",
+            "Index: []\n"
+          ]
+        }
+      ],
       "source": [
-        "# Your solution goes here"
+        "# my solution goes here\n",
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "import time\n",
+        "import random\n",
+        "\n",
+        "def get_soup(url, headers):\n",
+        "    try:\n",
+        "        response = requests.get(url, headers=headers)\n",
+        "        response.raise_for_status()\n",
+        "        return BeautifulSoup(response.content, 'html.parser')\n",
+        "    except requests.exceptions.RequestException as e:\n",
+        "        print(f\"Request failed: {e}\")\n",
+        "        return None\n",
+        "\n",
+        "def parse_movie_data(movie, movie_nr):\n",
+        "    # Title\n",
+        "    title = movie.h3.a.text\n",
+        "    \n",
+        "    # Year\n",
+        "    year = movie.h3.find('span', class_='lister-item-year').text.strip('()')\n",
+        "    \n",
+        "    # Rating\n",
+        "    rating = movie.find('div', class_='inline-block ratings-imdb-rating').strong.text\n",
+        "    \n",
+        "    # Runtime\n",
+        "    runtime = movie.find('span', class_='runtime').text.split()[0] if movie.find('span', class_='runtime') else 'N/A'\n",
+        "    \n",
+        "    # Genre\n",
+        "    genre = movie.find('span', class_='genre').text.strip() if movie.find('span', class_='genre') else 'N/A'\n",
+        "    \n",
+        "    # Description\n",
+        "    description = movie.find_all('p', class_='text-muted')[1].text.strip() if len(movie.find_all('p', class_='text-muted')) > 1 else 'N/A'\n",
+        "    \n",
+        "    # Director and Stars\n",
+        "    credit = movie.find('p', class_='').text.strip().split('|')\n",
+        "    director = credit[0].replace('Director:', '').replace('Directors:', '').strip()\n",
+        "    star = credit[1].replace('Stars:', '').strip() if len(credit) > 1 else 'N/A'\n",
+        "    \n",
+        "    # Votes\n",
+        "    vote = movie.find_all('span', attrs={'name': 'nv'})[0].text.replace(',', '') if movie.find_all('span', attrs={'name': 'nv'}) else 'N/A'\n",
+        "    \n",
+        "    # Gross Earnings\n",
+        "    gross = movie.find_all('span', attrs={'name': 'nv'})[1].text.replace('$', '').replace('M', '') if len(movie.find_all('span', attrs={'name': 'nv'})) > 1 else 'N/A'\n",
+        "    \n",
+        "    return {\n",
+        "        'Movie Nr': movie_nr,\n",
+        "        'Title': title,\n",
+        "        'Year': year,\n",
+        "        'Rating': float(rating),\n",
+        "        'Runtime (min)': runtime,\n",
+        "        'Genre': genre,\n",
+        "        'Description': description,\n",
+        "        'Director': director,\n",
+        "        'Stars': star,\n",
+        "        'Votes': vote,\n",
+        "        'Gross ($M)': gross\n",
+        "    }\n",
+        "\n",
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    # Base URL with placeholders for pagination\n",
+        "    base_url = f\"https://www.imdb.com/search/title/?title_type={title_type}&user_rating={user_rating},&release_date={start_date},{end_date}&sort=user_rating,desc&start={{}}\"\n",
+        "    \n",
+        "    all_movies = []\n",
+        "    start = 1\n",
+        "    user_agents = [\n",
+        "        \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36\",\n",
+        "        \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.212 Safari/537.36\",\n",
+        "        \"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.1.1 Safari/605.1.15\"\n",
+        "    ]\n",
+        "    \n",
+        "    while True:\n",
+        "        headers = {\n",
+        "            \"User-Agent\": random.choice(user_agents)\n",
+        "        }\n",
+        "        \n",
+        "        url = base_url.format(start)\n",
+        "        print(f\"Scraping URL: {url}\")  # Debugging print\n",
+        "        \n",
+        "        soup = get_soup(url, headers)\n",
+        "        \n",
+        "        if soup is None:\n",
+        "            break\n",
+        "        \n",
+        "        # Extract movie data\n",
+        "        movies = soup.find_all('div', class_='lister-item mode-advanced')\n",
+        "        print(f\"Found {len(movies)} movies on page starting at {start}\")  # Debugging print\n",
+        "        \n",
+        "        if not movies:\n",
+        "            break\n",
+        "        \n",
+        "        for idx, movie in enumerate(movies):\n",
+        "            movie_data = parse_movie_data(movie, start + idx)\n",
+        "            all_movies.append(movie_data)\n",
+        "        \n",
+        "        # Increment the start parameter by 50 to move to the next page\n",
+        "        start += 50\n",
+        "\n",
+        "        # To avoid being blocked, let's wait for a while before the next request\n",
+        "        time.sleep(random.uniform(1, 3))\n",
+        "    \n",
+        "    # Create a DataFrame\n",
+        "    df = pd.DataFrame(all_movies)\n",
+        "    \n",
+        "    return df\n",
+        "\n",
+        "# Define parameters\n",
+        "title_type = 'feature'\n",
+        "user_rating = '7.5,'\n",
+        "start_date = '1990-01-01'\n",
+        "end_date = '1992-12-31'\n",
+        "\n",
+        "# Scrape IMDb data\n",
+        "movies_df = scrape_imdb(title_type, user_rating, start_date, end_date)\n",
+        "\n",
+        "# Display the DataFrame\n",
+        "print(movies_df)\n",
+        "\n",
+        "\n"
       ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +444,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
