--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 1,
       "id": "40359eee-9cd7-4884-bfa4-83344c222305",
       "metadata": {
         "id": "40359eee-9cd7-4884-bfa4-83344c222305"
@@ -143,7 +143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 2,
       "id": "9bc52832",
       "metadata": {},
       "outputs": [],
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 8,
       "id": "5e6981ba",
       "metadata": {},
       "outputs": [
@@ -244,16 +244,51 @@
       "metadata": {},
       "outputs": [
         {
-          "ename": "Exception",
-          "evalue": "Failed to load page https://www.imdb.com/search/title/?title_type=feature&user_rating=7.5,10&release_date=1990-01-01,1992-12-31&sort=user_rating,desc",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[12], line 91\u001b[0m\n\u001b[1;32m     88\u001b[0m start_date \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m1990-01-01\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     89\u001b[0m end_date \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m1992-12-31\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 91\u001b[0m df \u001b[38;5;241m=\u001b[39m scrape_imdb(title_type, user_rating, start_date, end_date)\n",
-            "Cell \u001b[0;32mIn[12], line 12\u001b[0m, in \u001b[0;36mscrape_imdb\u001b[0;34m(title_type, user_rating, start_date, end_date)\u001b[0m\n\u001b[1;32m     10\u001b[0m response \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(url)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response\u001b[38;5;241m.\u001b[39mstatus_code \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m200\u001b[39m:\n\u001b[0;32m---> 12\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFailed to load page \u001b[39m\u001b[38;5;132;01m{\u001b[39;00murl\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m# Parse the HTML content using BeautifulSoup\u001b[39;00m\n\u001b[1;32m     15\u001b[0m soup \u001b[38;5;241m=\u001b[39m BeautifulSoup(response\u001b[38;5;241m.\u001b[39mcontent, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhtml.parser\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-            "\u001b[0;31mException\u001b[0m: Failed to load page https://www.imdb.com/search/title/?title_type=feature&user_rating=7.5,10&release_date=1990-01-01,1992-12-31&sort=user_rating,desc"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Empty DataFrame\n",
+            "Columns: []\n",
+            "Index: []\n"
           ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "Empty DataFrame\n",
+              "Columns: []\n",
+              "Index: []"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -266,7 +301,7 @@
         "    url = f\"https://www.imdb.com/search/title/?title_type={title_type}&user_rating={user_rating},10&release_date={start_date},{end_date}&sort=user_rating,desc\"\n",
         "    \n",
         "    # Make a request to the IMDb website\n",
-        "    response = requests.get(url)\n",
+        "    response = requests.get(url, headers=headers)\n",
         "    if response.status_code != 200:\n",
         "        raise Exception(f\"Failed to load page {url}\")\n",
         "    \n",
@@ -341,13 +376,16 @@
         "    \n",
         "    return df\n",
         "\n",
-        "# Execute the script to scrape data\n",
+        "# Execute \n",
         "title_type = \"feature\"\n",
         "user_rating = \"7.5\"\n",
         "start_date = \"1990-01-01\"\n",
         "end_date = \"1992-12-31\"\n",
         "\n",
-        "df = scrape_imdb(title_type, user_rating, start_date, end_date)"
+        "df = scrape_imdb(title_type, user_rating, start_date, end_date)\n",
+        "print(df.head())\n",
+        "\n",
+        "scrape_imdb(title_type, user_rating, start_date, end_date)"
       ]
     },
     {
