--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -59,6 +59,18 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 3,
+      "id": "0c07ef0c",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import requests \n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "3519921d-5890-445b-9a33-934ed8ee378c",
       "metadata": {
@@ -109,14 +121,100 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "40359eee-9cd7-4884-bfa4-83344c222305",
       "metadata": {
         "id": "40359eee-9cd7-4884-bfa4-83344c222305"
       },
       "outputs": [],
       "source": [
-        "# Your solution goes here"
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    # Constructing the IMDb search URL\n",
+        "    base_url = \"https://www.imdb.com/search/title/\"\n",
+        "    query_params = {\n",
+        "        \"title_type\": title_type,\n",
+        "        \"release_date\": f\"{start_date},{end_date}\",\n",
+        "        \"user_rating\": f\"{user_rating},\",\n",
+        "        \"view\": \"simple\"\n",
+        "    }\n",
+        "    \n",
+        "    # Sending a GET request to IMDb search page\n",
+        "    response = requests.get(base_url, params=query_params)\n",
+        "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+        "    \n",
+        "    # Extracting movie details\n",
+        "    movies = soup.find_all('div', class_='lister-item-content')\n",
+        "    \n",
+        "    # Lists to store extracted data\n",
+        "    movie_nr = []\n",
+        "    title = []\n",
+        "    year = []\n",
+        "    rating = []\n",
+        "    runtime = []\n",
+        "    genre = []\n",
+        "    description = []\n",
+        "    director = []\n",
+        "    stars = []\n",
+        "    votes = []\n",
+        "    gross = []\n",
+        "    \n",
+        "    # Iterate over each movie\n",
+        "    for idx, movie in enumerate(movies, start=1):\n",
+        "        # Movie number\n",
+        "        movie_nr.append(idx)\n",
+        "        \n",
+        "        # Title\n",
+        "        title.append(movie.find('a').text)\n",
+        "        \n",
+        "        # Year\n",
+        "        year.append(movie.find('span', class_='lister-item-year').text.strip('()'))\n",
+        "        \n",
+        "        # Rating\n",
+        "        rating_value = movie.find('div', class_='ratings-imdb-rating').strong.text\n",
+        "        rating.append(float(rating_value))\n",
+        "        \n",
+        "        # Runtime\n",
+        "        runtime_text = movie.find('span', class_='runtime').text.strip()\n",
+        "        runtime.append(int(runtime_text.split()[0]))  # Extracting only the minutes\n",
+        "        \n",
+        "        # Genre\n",
+        "        genre.append(movie.find('span', class_='genre').text.strip())\n",
+        "        \n",
+        "        # Description\n",
+        "        description.append(movie.find_all('p', class_='text-muted')[1].text.strip())\n",
+        "        \n",
+        "        # Director and Stars\n",
+        "        credits = movie.find('p', class_='').text.strip().split('|')\n",
+        "        director.append(credits[0].split(':')[1].strip())\n",
+        "        stars.append(credits[1].split(':')[1].strip() if len(credits) > 1 else '')\n",
+        "        \n",
+        "        # Votes\n",
+        "        votes_text = movie.find('span', attrs={'name': 'nv'}).text\n",
+        "        votes.append(int(''.join(filter(str.isdigit, votes_text))))\n",
+        "        \n",
+        "        # Gross (if available)\n",
+        "        try:\n",
+        "            gross_text = movie.find_all('span', attrs={'name': 'nv'})[1].text\n",
+        "            gross.append(float(gross_text.strip('$M').replace(',', '')))\n",
+        "        except IndexError:\n",
+        "            gross.append(None)  # No gross value available\n",
+        "    \n",
+        "    # Creating a DataFrame\n",
+        "    df = pd.DataFrame({\n",
+        "        'Movie Nr': movie_nr,\n",
+        "        'Title': title,\n",
+        "        'Year': year,\n",
+        "        'Rating': rating,\n",
+        "        'Runtime (min)': runtime,\n",
+        "        'Genre': genre,\n",
+        "        'Description': description,\n",
+        "        'Director': director,\n",
+        "        'Stars': stars,\n",
+        "        'Votes': votes,\n",
+        "        'Gross ($M)': gross\n",
+        "    })\n",
+        "    \n",
+        "    return df\n"
       ]
     },
     {
@@ -152,17 +250,16 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea",
-      "metadata": {
-        "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea"
-      },
+      "id": "01ad5bea",
+      "metadata": {},
       "outputs": [],
-      "source": [
-        "# Your solution goes here"
-      ]
+      "source": []
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +275,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
