--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,14 +109,217 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "40359eee-9cd7-4884-bfa4-83344c222305",
       "metadata": {
         "id": "40359eee-9cd7-4884-bfa4-83344c222305"
       },
       "outputs": [],
       "source": [
-        "# Your solution goes here"
+        "\n",
+        "import pandas as pd\n",
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import re\n",
+        "\n",
+        "# Set headers to mimic a real browser request\n",
+        "headers = {\n",
+        "    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.3',\n",
+        "    'Accept-Language': 'en-US,en;q=0.9',\n",
+        "    'Accept-Encoding': 'gzip, deflate, br',\n",
+        "    'Accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8',\n",
+        "    'Connection': 'keep-alive',\n",
+        "    'Upgrade-Insecure-Requests': '1',\n",
+        "    'Referer': 'https://www.google.com'\n",
+        "}\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "id": "1f9685b9",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def convert_duration_to_minutes(duration_text):\n",
+        "\n",
+        "    # if the duration_text doesn't contain hours or minutes, those values will default to 0.\n",
+        "    hours = 0\n",
+        "    minutes = 0\n",
+        "\n",
+        "    # extract the hours and minutes from duration_text\n",
+        "    hours_match = re.search(r'(\\d+)h', duration_text)\n",
+        "    minutes_match = re.search(r'(\\d+)m', duration_text)\n",
+        "\n",
+        "    if hours_match:\n",
+        "        hours = int(hours_match.group(1)) # the group method is to retrieve the matched digit. Output: 1\n",
+        "    if minutes_match:\n",
+        "        minutes = int(minutes_match.group(1)) \n",
+        "\n",
+        "    duration = hours * 60 + minutes\n",
+        "\n",
+        "    return duration"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "id": "8eecfcb0",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "\n",
+        "    url = f'https://www.imdb.com/search/title/?title_type={title_type}&release_date={start_date},{end_date}&user_rating={user_rating},10'\n",
+        "    #print(f\"URL: {url}\")  # Print URL for debugging\n",
+        "    \n",
+        "    response = requests.get(url, headers=headers)\n",
+        "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "    \n",
+        "    # Extract movie data\n",
+        "    movies = soup.find_all('li', class_=\"ipc-metadata-list-summary-item\")\n",
+        "    #print(f\"Number of movies found: {len(movies)}\")\n",
+        "    \n",
+        "    if not movies:\n",
+        "        print(\"No movies found. Please check the URL or selectors.\")\n",
+        "        return pd.DataFrame(columns=[\"Movie Nr\", \"Title\", \"Year\", \"Rating\", \"Runtime (min)\", \"Genre\", \"Description\", \"Director\", \"Stars\", \"Votes\"])\n",
+        "\n",
+        "    # Prepare lists to store the data\n",
+        "    movie_data = {\n",
+        "        \"Movie Nr\": [],\n",
+        "        \"Title\": [],\n",
+        "        \"Year\": [],\n",
+        "        \"Rating\": [],\n",
+        "        \"Duration (min)\": [],\n",
+        "        # \"Genre\": [],\n",
+        "        \"Description\": [],\n",
+        "        # \"Director\": [],\n",
+        "        # \"Stars\": [],\n",
+        "        \"Votes\": []\n",
+        "    }\n",
+        "    \n",
+        "    for idx, movie in enumerate(movies):\n",
+        "              # Movie Number\n",
+        "        movie_data[\"Movie Nr\"].append(idx + 1)\n",
+        "        \n",
+        "        # Title\n",
+        "        title = movie.h3.text \n",
+        "        movie_data[\"Title\"].append(title)\n",
+        "        \n",
+        "        # Year\n",
+        "        year = movie.find('span', class_=\"sc-b189961a-8 kLaxqf dli-title-metadata-item\").text\n",
+        "        year = int(re.search(r'\\d{4}', year).group())\n",
+        "        movie_data[\"Year\"].append(year)\n",
+        "        \n",
+        "        # Rating\n",
+        "        rating = movie.find('span', class_='ipc-rating-star ipc-rating-star--base ipc-rating-star--imdb ratingGroup--imdb-rating').text.split('\\xa0')[0]\n",
+        "        movie_data[\"Rating\"].append(float(rating))\n",
+        "        \n",
+        "        # Duration\n",
+        "        runtime = movie.find_all('span', class_=\"sc-b189961a-8 kLaxqf dli-title-metadata-item\")[1].text\n",
+        "        duration = convert_duration_to_minutes(runtime)\n",
+        "        movie_data[\"Duration (min)\"].append(duration)\n",
+        "        \n",
+        "        # Genre\n",
+        "        # genre = movie.find('span', class_='genre').text.strip()\n",
+        "        # movie_data[\"Genre\"].append(genre)\n",
+        "        \n",
+        "        # Description\n",
+        "        description = movie.find('div', class_=\"ipc-html-content-inner-div\").text.strip()\n",
+        "        movie_data[\"Description\"].append(description)\n",
+        "\n",
+        "        # # Director and Stars\n",
+        "        # people = movie.find('p', class_='').text.strip().split('|')\n",
+        "        # director = people[0].replace('Director:', '').replace('Directors:', '').strip()\n",
+        "        # stars = people[1].replace('Stars:', '').strip() if len(people) > 1 else ''\n",
+        "        # movie_data[\"Director\"].append(director)\n",
+        "        # movie_data[\"Stars\"].append(stars)\n",
+        "        \n",
+        "        # Votes\n",
+        "        votes = movie.find('span', class_=\"sc-b0901df4-0 bcQdDJ metacritic-score-box\").text\n",
+        "        movie_data[\"Votes\"].append(int(votes))\n",
+        "    \n",
+        "    # Create a DataFrame from the movie data\n",
+        "    df = pd.DataFrame(movie_data)\n",
+        "    \n",
+        "    return df\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "id": "61e370c4",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "    Movie Nr                          Title  Year  Rating  Duration (min)  \\\n",
+            "0          1    1. The Silence of the Lambs  1991     8.6             118   \n",
+            "1          2                  2. Goodfellas  1990     8.7             145   \n",
+            "2          3          3. Dances with Wolves  1990     8.0             181   \n",
+            "3          4  4. Terminator 2: Judgment Day  1991     8.6             137   \n",
+            "4          5              5. A Few Good Men  1992     7.7             138   \n",
+            "5          6            6. Scent of a Woman  1992     8.0             156   \n",
+            "6          7                7. Total Recall  1990     7.5             113   \n",
+            "7          8              8. Reservoir Dogs  1992     8.3              99   \n",
+            "8          9                  9. Home Alone  1990     7.7             103   \n",
+            "9         10            10. My Cousin Vinny  1992     7.6             120   \n",
+            "10        11                     11. Misery  1990     7.8             107   \n",
+            "11        12                 12. Unforgiven  1992     8.2             130   \n",
+            "12        13       13. Beauty and the Beast  1991     8.0              84   \n",
+            "13        14   14. The Last of the Mohicans  1992     7.6             112   \n",
+            "14        15        15. Edward Scissorhands  1990     7.9             105   \n",
+            "15        16       16. Fried Green Tomatoes  1991     7.7             130   \n",
+            "16        17     17. The Godfather Part III  1990     7.6             162   \n",
+            "17        18            18. Thelma & Louise  1991     7.6             130   \n",
+            "18        19                    19. Aladdin  1992     8.0              90   \n",
+            "19        20   20. The Hunt for Red October  1990     7.5             135   \n",
+            "20        21            21. Boyz n the Hood  1991     7.8             112   \n",
+            "21        22                        22. JFK  1991     8.0             189   \n",
+            "22        23                 23. Awakenings  1990     7.8             121   \n",
+            "23        24        24. Glengarry Glen Ross  1992     7.7             100   \n",
+            "24        25                 25. Dead Alive  1992     7.5             104   \n",
+            "\n",
+            "                                          Description  Votes  \n",
+            "0   A young F.B.I. cadet must receive the help of ...     86  \n",
+            "1   The story of Henry Hill and his life in the ma...     92  \n",
+            "2   Lieutenant John Dunbar, assigned to a remote w...     72  \n",
+            "3   A cyborg, identical to the one who failed to k...     75  \n",
+            "4   Lt. Daniel Kaffee, a US military lawyer, defen...     62  \n",
+            "5   A prep school student needing money agrees to ...     57  \n",
+            "6   When a man goes in to have virtual vacation me...     60  \n",
+            "7   When a simple jewelry heist goes horribly wron...     81  \n",
+            "8   An eight-year-old troublemaker, mistakenly lef...     63  \n",
+            "9   Two New Yorkers accused of murder in rural Ala...     68  \n",
+            "10  After a famous author is rescued from a car cr...     75  \n",
+            "11  Retired Old West gunslinger William Munny relu...     85  \n",
+            "12  A prince cursed to spend his days as a hideous...     95  \n",
+            "13  Three trappers protect the daughters of a Brit...     76  \n",
+            "14  The solitary life of an artificial man - who w...     74  \n",
+            "15  Evelyn, an ordinary housewife, visits a nursin...     64  \n",
+            "16  Follows Michael Corleone, now in his 60s, as h...     60  \n",
+            "17  Two best friends set out on an adventure, but ...     89  \n",
+            "18  A kind-hearted street urchin and a power-hungr...     86  \n",
+            "19  In November 1984, the Soviet Union's best subm...     58  \n",
+            "20  Follows the lives of three young males living ...     76  \n",
+            "21  New Orleans District Attorney Jim Garrison dis...     72  \n",
+            "22  The victims of an encephalitis epidemic many y...     74  \n",
+            "23  An examination of the machinations behind the ...     84  \n",
+            "24  A young man's mother is bitten by a Sumatran r...     54  \n"
+          ]
+        }
+      ],
+      "source": [
+        "title_type = 'feature'\n",
+        "start_date = '1990-01-01'\n",
+        "end_date = '1992-12-31'\n",
+        "user_rating = '7.5'\n",
+        "\n",
+        "df = scrape_imdb(title_type, user_rating, start_date, end_date)\n",
+        "print(df)"
       ]
     },
     {
@@ -163,6 +366,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +384,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.12.4"
     }
   },
   "nbformat": 4,
