--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,60 +109,66 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "40359eee-9cd7-4884-bfa4-83344c222305",
-      "metadata": {
-        "id": "40359eee-9cd7-4884-bfa4-83344c222305"
-      },
-      "outputs": [],
+      "execution_count": 48,
+      "id": "bcc08d93",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Empty DataFrame\n",
+            "Columns: [Movie Nr, Title, Year, Rating, Runtime (min), Genre, Description, Director, Stars, Votes, Gross ($M)]\n",
+            "Index: []\n"
+          ]
+        }
+      ],
       "source": [
-        "# Your solution goes here"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "9ab1217a-df9d-4a2b-a32c-2c5f1eecd52a",
-      "metadata": {
-        "id": "9ab1217a-df9d-4a2b-a32c-2c5f1eecd52a"
-      },
-      "source": [
-        "## BONUS\n",
+        "import pandas as pd\n",
+        "from bs4 import BeautifulSoup\n",
+        "import requests\n",
         "\n",
-        "The search results span multiple pages, housing a total of 631 movies in our example with each page displaying 50 movies at most. To scrape data seamlessly from all pages, you'll need to dive deep into the structure of the URLs generated with each \"Next\" click.\n",
+        "def get_soup():\n",
+        "    from_to_date = '1990-01-01,1992-12-31'\n",
+        "    from_to_rating = '7.5,10'\n",
+        "    url = f'https://www.imdb.com/search/title/?title_type=feature&release_date={from_to_date}&user_rating={from_to_rating}'\n",
+        "    headers = {\n",
+        "        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.3'\n",
+        "    }\n",
+        "    response = requests.get(url, headers=headers)\n",
+        "    soup = BeautifulSoup(response.content, 'html.parser')\n",
         "\n",
-        "Take a close look at the following URLs:\n",
-        "- First page:\n",
-        "  ```\n",
-        "  https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,\n",
-        "  ```\n",
-        "- Second page:\n",
-        "  ```\n",
-        "  https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,&start=51&ref_=adv_nxt\n",
-        "  ```\n",
-        "- Third page:\n",
-        "  ```\n",
-        "  https://www.imdb.com/search/title/?title_type=feature&release_date=1990-01-01,1992-12-31&user_rating=7.5,&start=101&ref_=adv_nxt\n",
-        "  ```\n",
+        "    pelicula_list = []\n",
         "\n",
-        "You should notice a pattern. There is a `start` parameter incrementing by 50 with each page, paired with a constant `ref_` parameter holding the value \"adv_nxt\".\n",
+        "    for index, item in enumerate(soup.find_all('div', class_='lister-item mode-advanced')):\n",
+        "        title = item.h3.a.text\n",
+        "        year = item.find('span', class_='lister-item-year').text.strip('()')\n",
+        "        rating = item.find('div', class_='inline-block ratings-imdb-rating').strong.text if item.find('div', class_='inline-block ratings-imdb-rating') else 'N/A'\n",
+        "        runtime = item.find('span', class_='runtime').text.strip(' min') if item.find('span', class_='runtime') else 'N/A'\n",
+        "        genre = item.find('span', class_='genre').text.strip() if item.find('span', class_='genre') else 'N/A'\n",
+        "        description = item.find_all('p', class_='text-muted')[1].text.strip()\n",
+        "        director_and_stars = item.find_all('p', class_='')[1].text.split('|')\n",
+        "        director = director_and_stars[0].replace('Director:', '').replace('Directors:', '').strip()\n",
+        "        stars_list = director_and_stars[1].replace('Stars:', '').strip() if len(director_and_stars) > 1 else 'N/A'\n",
+        "        nv = item.find_all('span', attrs={'name': 'nv'})\n",
+        "        votes = nv[0].text.replace(',', '') if nv else 'N/A'\n",
+        "        gross = nv[1].text if len(nv) > 1 else 'N/A'\n",
+        "        gross = gross.replace('$', '').replace('M', '') if gross != 'N/A' else 'N/A'\n",
         "\n",
-        "Modify your script so it's capable of iterating over all available pages to fetch data on all the 631 movies (631 is the total number of movies in the proposed example)."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea",
-      "metadata": {
-        "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea"
-      },
-      "outputs": [],
-      "source": [
-        "# Your solution goes here"
+        "        pelicula_list.append([index+1, title, year, rating, runtime, genre, description, director, stars_list, votes, gross])\n",
+        "\n",
+        "    df = pd.DataFrame(pelicula_list, columns=['Movie Nr', 'Title', 'Year', 'Rating', 'Runtime (min)', 'Genre', 'Description', 'Director', 'Stars', 'Votes', 'Gross ($M)'])\n",
+        "    return df\n",
+        "\n",
+        "df_peliculas = get_soup()\n",
+        "print(df_peliculas.head())\n"
       ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +184,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.12.4"
     }
   },
   "nbformat": 4,
