--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,18 +109,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 50,
       "id": "bcc08d93",
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Empty DataFrame\n",
-            "Columns: [Movie Nr, Title, Year, Rating, Runtime (min), Genre, Description, Director, Stars, Votes, Gross ($M)]\n",
-            "Index: []\n"
-          ]
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "Empty DataFrame\n",
+              "Columns: []\n",
+              "Index: []"
+            ]
+          },
+          "execution_count": 50,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -128,41 +157,96 @@
         "from bs4 import BeautifulSoup\n",
         "import requests\n",
         "\n",
-        "def get_soup():\n",
-        "    from_to_date = '1990-01-01,1992-12-31'\n",
-        "    from_to_rating = '7.5,10'\n",
-        "    url = f'https://www.imdb.com/search/title/?title_type=feature&release_date={from_to_date}&user_rating={from_to_rating}'\n",
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    url = url = f\"https://www.imdb.com/search/title/?title_type={title_type}&release_date={start_date},{end_date}&user_rating={user_rating},10\"\n",
         "    headers = {\n",
         "        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.3'\n",
         "    }\n",
         "    response = requests.get(url, headers=headers)\n",
         "    soup = BeautifulSoup(response.content, 'html.parser')\n",
         "\n",
-        "    pelicula_list = []\n",
+        "    movies = []\n",
         "\n",
-        "    for index, item in enumerate(soup.find_all('div', class_='lister-item mode-advanced')):\n",
-        "        title = item.h3.a.text\n",
-        "        year = item.find('span', class_='lister-item-year').text.strip('()')\n",
-        "        rating = item.find('div', class_='inline-block ratings-imdb-rating').strong.text if item.find('div', class_='inline-block ratings-imdb-rating') else 'N/A'\n",
-        "        runtime = item.find('span', class_='runtime').text.strip(' min') if item.find('span', class_='runtime') else 'N/A'\n",
-        "        genre = item.find('span', class_='genre').text.strip() if item.find('span', class_='genre') else 'N/A'\n",
-        "        description = item.find_all('p', class_='text-muted')[1].text.strip()\n",
-        "        director_and_stars = item.find_all('p', class_='')[1].text.split('|')\n",
-        "        director = director_and_stars[0].replace('Director:', '').replace('Directors:', '').strip()\n",
-        "        stars_list = director_and_stars[1].replace('Stars:', '').strip() if len(director_and_stars) > 1 else 'N/A'\n",
-        "        nv = item.find_all('span', attrs={'name': 'nv'})\n",
-        "        votes = nv[0].text.replace(',', '') if nv else 'N/A'\n",
-        "        gross = nv[1].text if len(nv) > 1 else 'N/A'\n",
-        "        gross = gross.replace('$', '').replace('M', '') if gross != 'N/A' else 'N/A'\n",
+        "    for div in soup.find_all('div', class_='lister-item mode-advanced'):\n",
+        "        nr = div.find('span', class_='lister-item-index unbold text-primary').text.strip('.').strip()\n",
+        "        title = div.find('h3').find('a').text.strip()\n",
+        "        year = div.find('span', class_='lister-item-year').text.strip('()')\n",
+        "        rating = div.find('strong').text\n",
+        "        runtime = div.find('span', class_='runtime').text.strip(' min') if div.find('span', class_='runtime') else None\n",
+        "        genre = div.find('span', class_='genre').text.strip() if div.find('span', class_='genre') else None\n",
+        "        description = div.find_all('p', class_='text-muted')[1].text.strip()\n",
+        "        director_and_stars = div.find('p', class_='').find_all('a')\n",
+        "        director = director_and_stars[0].text if director_and_stars else 'N/A'\n",
+        "        stars = ', '.join([a.text for a in director_and_stars[1:]]) if director_and_stars else 'N/A'\n",
+        "        votes = div.find('span', attrs={'name': 'nv'})['data-value'] if div.find('span', attrs={'name': 'nv'}) else None\n",
+        "        gross = div.find_all('span', attrs={'name': 'nv'})[1]['data-value'] if len(div.find_all('span', attrs={'name': 'nv'})) > 1 else None\n",
         "\n",
-        "        pelicula_list.append([index+1, title, year, rating, runtime, genre, description, director, stars_list, votes, gross])\n",
+        "        movie_details = {'Movie Nr': nr, 'Title': title, 'Year': year, 'Rating': rating, 'Runtime (min)': runtime, 'Genre': genre, 'Description': description, 'Director': director, 'Stars': stars, 'Votes': votes, 'Gross ($M)': gross,}\n",
+        "        movies.append(movie_details)\n",
         "\n",
-        "    df = pd.DataFrame(pelicula_list, columns=['Movie Nr', 'Title', 'Year', 'Rating', 'Runtime (min)', 'Genre', 'Description', 'Director', 'Stars', 'Votes', 'Gross ($M)'])\n",
+        "    df = pd.DataFrame(movies)\n",
         "    return df\n",
         "\n",
-        "df_peliculas = get_soup()\n",
-        "print(df_peliculas.head())\n"
+        "df = scrape_imdb(title_type='feature', user_rating='7.5', start_date='1990-01-01', end_date='1992-12-31')\n",
+        "df"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 54,
+      "id": "fbadd3cc",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#Bonus \n",
+        "import pandas as pd\n",
+        "from bs4 import BeautifulSoup\n",
+        "import requests\n",
+        "\n",
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    url = f\"https://www.imdb.com/search/title/?title_type={title_type}&release_date={start_date},{end_date}&user_rating={user_rating},10\"\n",
+        "    response = requests.get(url)\n",
+        "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "    total_movies = int(soup.find('div', class_='desc').find('span').text.split('of')[-1].split('titles')[0].strip())\n",
+        "\n",
+        "    pages = total_movies // 50 + (1 if total_movies % 50 != 0 else 0)\n",
+        "    movies = []\n",
+        "    for page in range(1, pages * 50, 50):\n",
+        "        url_page = url + f'&start={page}&ref_=adv_nxt'\n",
+        "        response_page = requests.get(url_page)\n",
+        "        soup_page = BeautifulSoup(response_page.content, 'html.parser')\n",
+        "   \n",
+        "        for div in soup_page.find_all('div', class_='lister-item mode-advanced'):\n",
+        "            nr = div.find('span', class_='lister-item-index unbold text-primary').text.strip('.').strip()\n",
+        "            title = div.find('h3').find('a').text.strip()\n",
+        "            year = div.find('span', class_='lister-item-year text-muted unbold').text.strip('()')\n",
+        "            rating = div.find('strong').text\n",
+        "            runtime = div.find('span', class_='runtime').text.strip(' min') if div.find('span', class_='runtime') else None\n",
+        "            genre = div.find('span', class_='genre').text.strip() if div.find('span', class_='genre') else None\n",
+        "            description = div.find_all('p', class_='text-muted')[1].text.strip()\n",
+        "            director_and_stars = div.find('p', class_='').find_all('a')\n",
+        "            director = director_and_stars[0].text if director_and_stars else 'N/A'\n",
+        "            stars = ', '.join([a.text for a in director_and_stars[1:]]) if director_and_stars else 'N/A'\n",
+        "            votes = div.find('span', attrs={'name': 'nv'})['data-value'] if div.find('span', attrs={'name': 'nv'}) else None\n",
+        "            gross = div.find_all('span', attrs={'name': 'nv'})[1]['data-value'] if len(div.find_all('span', attrs={'name': 'nv'})) > 1 else None\n",
+        "\n",
+        "        movie_details = {'Movie Nr': nr, 'Title': title, 'Year': year, 'Rating': rating, 'Runtime (min)': runtime, \"Genre\": genre, 'Description': description, 'Director': director, 'Stars': stars, 'Votes': votes, 'Gross ($M)': gross}\n",
+        "\n",
+        "        df = pd.DataFrame(movies)\n",
+        "        return df\n",
+        "    \n",
+        "\n",
+        "    df = scrape_imdb(title_type='feature', user_rating='7.5', start_date='1990-01-01', end_date='1992-12-31')\n",
+        "    df"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "f4bfca72",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
