--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,14 +109,112 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "40359eee-9cd7-4884-bfa4-83344c222305",
-      "metadata": {
-        "id": "40359eee-9cd7-4884-bfa4-83344c222305"
-      },
-      "outputs": [],
+      "execution_count": 10,
+      "id": "de3f08da",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Movie Nr</th>\n",
+              "      <th>Title</th>\n",
+              "      <th>Year</th>\n",
+              "      <th>Rating</th>\n",
+              "      <th>Runtime (min)</th>\n",
+              "      <th>Genre</th>\n",
+              "      <th>Description</th>\n",
+              "      <th>Director</th>\n",
+              "      <th>Stars</th>\n",
+              "      <th>Votes</th>\n",
+              "      <th>Gross ($M)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "Empty DataFrame\n",
+              "Columns: [Movie Nr, Title, Year, Rating, Runtime (min), Genre, Description, Director, Stars, Votes, Gross ($M)]\n",
+              "Index: []"
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Your solution goes here"
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "\n",
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    base_url = \"https://www.imdb.com/search/title/\"\n",
+        "    params = {\n",
+        "        \"title_type\": title_type,\n",
+        "        \"user_rating\": user_rating,\n",
+        "        \"release_date\": f\"{start_date},{end_date}\",\n",
+        "        \"sort\": \"user_rating,desc\"\n",
+        "    }\n",
+        "    \n",
+        "    response = requests.get(base_url, params=params)\n",
+        "    soup = BeautifulSoup(response.content, 'lxml')\n",
+        "\n",
+        "    movies = soup.find_all('div', class_='lister-item mode-advanced')\n",
+        "    \n",
+        "    movie_list = []\n",
+        "    \n",
+        "    for movie in movies:\n",
+        "        movie_nr = movie.find('span', class_='lister-item-index').text.strip('.')\n",
+        "        title = movie.h3.a.text\n",
+        "        year = movie.h3.find('span', class_='lister-item-year').text.strip('()')\n",
+        "        rating = movie.find('div', class_='inline-block ratings-imdb-rating')['data-value']\n",
+        "        runtime = movie.find('span', class_='runtime')\n",
+        "        runtime = int(runtime.text.replace(' min', '')) if runtime else None\n",
+        "        genre = movie.find('span', class_='genre').text.strip()\n",
+        "        description = movie.find_all('p', class_='text-muted')[1].text.strip()\n",
+        "        director_stars = movie.find_all('p')[2].text.strip().replace('\\n', '').split('|')\n",
+        "        \n",
+        "        director = director_stars[0].replace('Director:', '').replace('Directors:', '').strip()\n",
+        "        stars = director_stars[1].replace('Stars:', '').strip() if len(director_stars) > 1 else None\n",
+        "        votes_gross = movie.find_all('span', attrs={'name': 'nv'})\n",
+        "        \n",
+        "        votes = votes_gross[0].text if votes_gross else None\n",
+        "        gross = votes_gross[1].text.replace('$', '').replace('M', '') if len(votes_gross) > 1 else None\n",
+        "        \n",
+        "        movie_list.append([\n",
+        "            movie_nr, title, year, rating, runtime, genre, description, director, stars, votes, gross\n",
+        "        ])\n",
+        "    \n",
+        "    df = pd.DataFrame(movie_list, columns=[\n",
+        "        'Movie Nr', 'Title', 'Year', 'Rating', 'Runtime (min)', 'Genre', 'Description', 'Director', 'Stars', 'Votes', 'Gross ($M)'\n",
+        "    ])\n",
+        "    \n",
+        "    return df\n",
+        "\n",
+        "# usage\n",
+        "df = scrape_imdb(\"feature\", \"7.5,\", \"1990-01-01\", \"1992-12-31\")\n",
+        "df\n"
       ]
     },
     {
@@ -151,18 +249,136 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea",
       "metadata": {
         "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Movie Nr</th>\n",
+              "      <th>Title</th>\n",
+              "      <th>Year</th>\n",
+              "      <th>Rating</th>\n",
+              "      <th>Runtime (min)</th>\n",
+              "      <th>Genre</th>\n",
+              "      <th>Description</th>\n",
+              "      <th>Director</th>\n",
+              "      <th>Stars</th>\n",
+              "      <th>Votes</th>\n",
+              "      <th>Gross ($M)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "Empty DataFrame\n",
+              "Columns: [Movie Nr, Title, Year, Rating, Runtime (min), Genre, Description, Director, Stars, Votes, Gross ($M)]\n",
+              "Index: []"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Your solution goes here"
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "\n",
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    base_url = \"https://www.imdb.com/search/title/\"\n",
+        "    params = {\n",
+        "        \"title_type\": title_type,\n",
+        "        \"user_rating\": user_rating,\n",
+        "        \"release_date\": f\"{start_date},{end_date}\",\n",
+        "        \"sort\": \"user_rating,desc\"\n",
+        "    }\n",
+        "\n",
+        "    movie_list = []\n",
+        "    start = 1\n",
+        "\n",
+        "    while True:\n",
+        "        params[\"start\"] = start\n",
+        "        response = requests.get(base_url, params=params)\n",
+        "        soup = BeautifulSoup(response.content, 'lxml')\n",
+        "\n",
+        "        movies = soup.find_all('div', class_='lister-item mode-advanced')\n",
+        "        if not movies:\n",
+        "            break  # Exit loop if no more movies are found\n",
+        "\n",
+        "        for movie in movies:\n",
+        "            movie_nr = movie.find('span', class_='lister-item-index').text.strip('.')\n",
+        "            title = movie.h3.a.text\n",
+        "            year = movie.h3.find('span', class_='lister-item-year').text.strip('()')\n",
+        "            rating = movie.find('div', class_='inline-block ratings-imdb-rating')['data-value']\n",
+        "            runtime = movie.find('span', class_='runtime')\n",
+        "            runtime = int(runtime.text.replace(' min', '')) if runtime else None\n",
+        "            genre = movie.find('span', class_='genre').text.strip()\n",
+        "            description = movie.find_all('p', class_='text-muted')[1].text.strip()\n",
+        "            director_stars = movie.find_all('p')[2].text.strip().replace('\\n', '').split('|')\n",
+        "\n",
+        "            director = director_stars[0].replace('Director:', '').replace('Directors:', '').strip()\n",
+        "            stars = director_stars[1].replace('Stars:', '').strip() if len(director_stars) > 1 else None\n",
+        "            votes_gross = movie.find_all('span', attrs={'name': 'nv'})\n",
+        "\n",
+        "            votes = votes_gross[0].text if votes_gross else None\n",
+        "            gross = votes_gross[1].text.replace('$', '').replace('M', '') if len(votes_gross) > 1 else None\n",
+        "\n",
+        "            movie_list.append([\n",
+        "                movie_nr, title, year, rating, runtime, genre, description, director, stars, votes, gross\n",
+        "            ])\n",
+        "\n",
+        "        start += 50  # Increment the start parameter for the next page\n",
+        "\n",
+        "    df = pd.DataFrame(movie_list, columns=[\n",
+        "        'Movie Nr', 'Title', 'Year', 'Rating', 'Runtime (min)', 'Genre', 'Description', 'Director', 'Stars', 'Votes', 'Gross ($M)'\n",
+        "    ])\n",
+        "\n",
+        "    return df\n",
+        "\n",
+        "#\n",
+        "df = scrape_imdb(\"feature\", \"7.5,\", \"1990-01-01\", \"1992-12-31\")\n",
+        "df\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "91e3d996",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -178,10 +394,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.11.9"
     }
   },
   "nbformat": 4,
