--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 18,
       "id": "e40a9848",
       "metadata": {},
       "outputs": [],
@@ -117,7 +117,7 @@
         "def get_imdb(type, start_date, end_date, min_user_rating, max_user_rating,url):\n",
         "  #Make the request\n",
         "  \n",
-        "  #url = f\"https://www.imdb.com/search/title/?title_type={title_type}&release_date={start_date},{end_date}&user_rating={min_user_rating},{max_user_rating}\"\n",
+        "  url = f\"https://www.imdb.com/search/title/?title_type={title_type}&release_date={start_date},{end_date}&user_rating={min_user_rating},{max_user_rating}\"\n",
         "\n",
         "  headers = {\"User-Agent\":\"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/126.0.0.0 Safari/537.36\"}\n",
         "  r = requests.get(url, headers = headers)\n",
@@ -542,24 +542,7 @@
       },
       "outputs": [],
       "source": [
-        "# Your solution goes here\n",
-        "\n",
-        "title_type = input(\"insert a title type\")\n",
-        "start_date = input(\"insert a start date (format yyyy-mm-dd)\")\n",
-        "end_date = input(\"insert a end date (format yyyy-mm-dd)\")\n",
-        "min_user_rating = input(\"insert min user rating\")\n",
-        "max_user_rating = input(\"insert max user rating\")\n",
-        "Page_Iterator =\n",
-        "def scrape_all_pages(page_number):\n",
-        "  list_df = []\n",
-        "\n",
-        "  for i in range(1, page_number+1):\n",
-        "    df_i = get_imdb(type, start_date, end_date, min_user_rating, max_user_rating,url)\n",
-        "    list_df.append(df_i)\n",
-        "\n",
-        "  return pd.concat(list_df)\n",
-        "\n",
-        "scrape_all_pages(50)"
+        "# Your solution goes here"
       ]
     }
   ],
