--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -535,14 +535,91 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea",
       "metadata": {
         "id": "21ac4fc0-a12b-4a00-9266-2020166f0dea"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Failed to retrieve data: 403\n",
+            "Empty DataFrame\n",
+            "Columns: []\n",
+            "Index: []\n"
+          ]
+        }
+      ],
       "source": [
-        "# Your solution goes here"
+        "import pandas as pd\n",
+        "from bs4 import BeautifulSoup\n",
+        "import requests\n",
+        "\n",
+        "# Function to scrape IMDb based on title type, user rating, and release dates.\n",
+        "def scrape_imdb(title_type, user_rating, start_date, end_date):\n",
+        "    base_url = \"https://www.imdb.com/search/title/\"\n",
+        "    params = {\n",
+        "        'title_type': title_type,\n",
+        "        'release_date': f\"{start_date},{end_date}\",\n",
+        "        'user_rating': f\"{user_rating},10\",\n",
+        "        'start': 1  # Pagination starts at 1\n",
+        "    }\n",
+        "    \n",
+        "    all_movies = []\n",
+        "\n",
+        "    while True:\n",
+        "        response = requests.get(base_url, params=params)\n",
+        "        if response.status_code != 200:\n",
+        "            print(f\"Failed to retrieve data: {response.status_code}\")\n",
+        "            break\n",
+        "        \n",
+        "        soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "        movie_containers = soup.find_all('div', class_='lister-item mode-advanced')\n",
+        "        \n",
+        "        if not movie_containers:\n",
+        "            break\n",
+        "\n",
+        "        for div in movie_containers:\n",
+        "            nr = div.find('span', class_='lister-item-index unbold text-primary').text.strip('.').strip()\n",
+        "            title = div.find('h3').find('a').text.strip()\n",
+        "            year = div.find('span', class_='lister-item-year text-muted unbold').text.strip('()')\n",
+        "            rating = float(div.find('strong').text) if div.find('strong') else None\n",
+        "            runtime = int(div.find('span', class_='runtime').text.strip(' min')) if div.find('span', class_='runtime') else None\n",
+        "            genre = div.find('span', class_='genre').text.strip() if div.find('span', class_='genre') else None\n",
+        "            description = div.find_all('p', class_='text-muted')[1].text.strip() if len(div.find_all('p', class_='text-muted')) > 1 else None\n",
+        "            director_and_stars = [a.text for a in div.find('p', class_='').find_all('a')]\n",
+        "            director = director_and_stars[0] if director_and_stars else 'N/A'\n",
+        "            stars = ', '.join(director_and_stars[1:]) if len(director_and_stars) > 1 else 'N/A'\n",
+        "            votes = int(div.find('span', attrs={'name': 'nv'}).get('data-value').replace(',', '')) if div.find('span', attrs={'name': 'nv'}) else None\n",
+        "            gross = div.find_all('span', attrs={'name': 'nv'})\n",
+        "            gross = float(gross[1].get('data-value').replace(',', '')) if len(gross) > 1 else None\n",
+        "            \n",
+        "            movie_details = {\n",
+        "                'Movie Nr': nr,\n",
+        "                'Title': title,\n",
+        "                'Year': year,\n",
+        "                'Rating': rating,\n",
+        "                'Runtime (min)': runtime,\n",
+        "                'Genre': genre,\n",
+        "                'Description': description,\n",
+        "                'Director': director,\n",
+        "                'Stars': stars,\n",
+        "                'Votes': votes,\n",
+        "                'Gross ($M)': gross\n",
+        "            }\n",
+        "            \n",
+        "            all_movies.append(movie_details)\n",
+        "        \n",
+        "        params['start'] += 50  # Move to the next page\n",
+        "\n",
+        "    df = pd.DataFrame(all_movies)\n",
+        "    return df\n",
+        "\n",
+        "# Usage example\n",
+        "df = scrape_imdb(title_type='feature', user_rating=7.5, start_date='1990-01-01', end_date='1992-12-31')\n",
+        "print(df.head())"
       ]
     }
   ],
