--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -431,7 +431,7 @@
         "min_user_rating = input(\"Insert the min user rating\")\n",
         "max_user_rating = input(\"insert the max user rating\")\n",
         "\n",
-        "data = getimdb(title_type, start_date, end_date, min_user_rating, max_user_rating)\n",
+        "data = scrape_imdb(title_type, start_date, end_date, min_user_rating, max_user_rating)\n",
         "pd.DataFrame.from_dict(data,orient=\"index\")\n"
       ]
     },
@@ -442,7 +442,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def getimdb(type, start_date, end_date, min_user_rating, max_user_rating):\n",
+        "def scrape_imdb(type, start_date, end_date, min_user_rating, max_user_rating):\n",
         "    #created ownn URL\n",
         "    url_page1 = f\"https://www.imdb.com/search/title/?title_type={title_type}&release_date={start_date},{end_date}user_rating={min_user_rating},{max_user_rating}\"\n",
         "    header_userags = {\"User-Agent\":\"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/126.0.0.0 Safari/537.36\"}\n",
